# quire

./: .gitignore  CMakeLists.txt  Makefile  glyph.ppm
include/: quire_attributes.h  quire_error.h  quire_event.h  quire_log.h  quire_platform.h  quire_types.h
src/: ftmain.c  main.c  quire_error.c  quire_log.c  quire_platform.c  quire_platform_x11.c  x11main.c
